--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,34 +1,26 @@
 cmake_minimum_required(VERSION 3.10)
 
-# project name
+# Project name.
 project(mineraker)
-
-# main executable
 add_executable(${PROJECT_NAME} src/main.cpp)
-# add header files to include
-target_include_directories(mineraker PRIVATE ${PROJECT_SOURCE_DIR}/src)
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${mineraker_SOURCE_DIR}/cmake")
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -O2 -lSDL2 -lSDL2_image -lSDL2_ttf")
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
 
 find_package(SDL2 REQUIRED)
 include_directories(${SDL2_INCLUDE_DIRS})
+include_directories(${PROJECT_SOURCE_DIR}/src)
 
 find_package(SDL2 REQUIRED)
 find_package(SDL2_image REQUIRED)
 find_package(SDL2_ttf REQUIRED)
 
-include_directories(${SDL2_INCLUDE_DIR}
-                    ${SDL2_IMAGE_INCLUDE_DIR}
-                    ${SDL2_TTF_INCLUDE_DIR})
-target_link_libraries(mineraker ${SDL2_LIBRARY}
-                             ${SDL2_IMAGE_LIBRARIES}
-                             ${SDL2_TTF_LIBRARIES})
+include_directories(${SDL2_INCLUDE_DIR} ${SDL2_IMAGE_INCLUDE_DIR} ${SDL2_TTF_INCLUDE_DIR})
+#link_directories(${PROJECT_SOURCE_DIR}/src ${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS})
+target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARY} ${SDL2_IMAGE_LIBRARIES} ${SDL2_TTF_LIBRARIES})
 
-# add link libraries to include
-#target_link_libraries(mineraker ${SDL2_LIBRARIES})
-
-set_target_properties(mineraker PROPERTIES
+set_target_properties(${PROJECT_NAME} PROPERTIES
     CXX_STANDARD 17
-    CXX_STANDARD_REQUIRED YES
-    CXX_EXTENSIONS NO
+    CXX_STANDARD_REQUIRED ON
+    CXX_EXTENSIONS OFF
 )
