CMake now optimizes with -O2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,23 +2,26 @@ cmake_minimum_required(VERSION 3.10)
 
 # Project name.
 project(mineraker)
-add_executable(${PROJECT_NAME} src/main.cpp)
+add_executable(${PROJECT_NAME} ${PROJECT_SOURCE_DIR}/src/main.cpp)
 
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -O2 -lSDL2 -lSDL2_image -lSDL2_ttf")
+set(CMAKE_CXX_FLAGS "-O2 -Wall")
+
+# Path for CMake modules.
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
 
-find_package(SDL2 REQUIRED)
-include_directories(${SDL2_INCLUDE_DIRS})
+# Project specific include headers.
 include_directories(${PROJECT_SOURCE_DIR}/src)
 
+# Initiate SDL2 finder modules.
 find_package(SDL2 REQUIRED)
 find_package(SDL2_image REQUIRED)
 find_package(SDL2_ttf REQUIRED)
 
+# Include SDL2 directories.
 include_directories(${SDL2_INCLUDE_DIR} ${SDL2_IMAGE_INCLUDE_DIR} ${SDL2_TTF_INCLUDE_DIR})
-#link_directories(${PROJECT_SOURCE_DIR}/src ${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS})
 target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARY} ${SDL2_IMAGE_LIBRARIES} ${SDL2_TTF_LIBRARIES})
 
+# Require compiler with C++17 features.
 set_target_properties(${PROJECT_NAME} PROPERTIES
     CXX_STANDARD 17
     CXX_STANDARD_REQUIRED ON
